--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -2419,7 +2419,7 @@ nameNsDescription:
     placeholder: 'A unique name'
   namespace:
     label: Namespace
-    placeholder:
+    placeholder: ''
   workspace:
     label: Workspace
     placeholder:
@@ -5267,7 +5267,7 @@ typeLabel:
       one { Network }
       other { Networks }
     }
-  cdi.kubevirt.io.datavolume: |-
+  volume: |-
     {count, plural,
       one { Volume }
       other { Volumes }
