--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -4769,7 +4769,7 @@ harvester:
       setFirst: Set as root volume
       saveVolume: Update Volume
       title:
-        vmImage: VM Image
+        vmImage: Image Volume
         existingVolume: Existing Volume
         volume: Volume
         container: Container
