--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5312,7 +5312,7 @@ typeLabel:
       one { Cluster }
       other { Clusters }
     }
-  cloudTemplate: |-
+  cloudtemplate: |-
     {count, plural,
       one { Cloud Config Template }
       other { Cloud Config Templates }
