--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -147,7 +147,7 @@ product:
   monitoring: Monitoring
   mcapps: Multi-cluster Apps
   harvesterManager: Virtualization Management
-  virtual: Harvester
+  harvester: Harvester
 
 suffix:
   percent: "%"
