--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -4693,6 +4693,12 @@ harvester:
         tip: Please enter a template name!
         success: 'Template { templateName } created successfully.'
         failed: 'Failed generated template!'
+    exportImage:
+      title: Export Image
+      name: Name
+      namespace: Namespace
+      message:
+        success: 'Image { name } created successfully.'
     migration:
       failedMessage: Latest migration failed!
       title: Migration
@@ -4744,6 +4750,7 @@ harvester:
     cordon: Cordon
     uncordon: Uncordon
     addHotplug: Add Volume
+    exportImage: Export Image
   tableHeaders:
     size: Size
     progress: Progress
