--- a/assets/translations/zh-hans.yaml
+++ b/assets/translations/zh-hans.yaml
@@ -4463,6 +4463,7 @@ typeLabel:
   harvesterhci.io.setting: 设置
   harvesterhci.io.host: 主机
   harvesterhci.io.virtualmachinebackup: 备份
+  harvesterhci.io.management.cluster: Harvester集群
 
 action:
   clone: 克隆
