--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5161,7 +5161,7 @@ harvester:
 
   manager:
     cluster:
-      label: Clusters
+      label: Harvester Clusters
   
   support:
     title: Harvester Support
@@ -5512,8 +5512,8 @@ typeLabel:
     }
   harvesterhci.io.management.cluster: |-
     {count, plural,
-      one { Cluster }
-      other { Clusters }
+      one { Harvester Cluster }
+      other { Harvester Clusters }
     }
   harvesterhci.io.cloudtemplate: |-
     {count, plural,
