--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -4810,7 +4810,7 @@ harvester:
         success: 'Template { templateName } created successfully.'
         failed: 'Failed generated template!'
     exportImage:
-      title: Export Image
+      title: Export to Image
       name: Name
       namespace: Namespace
       message:
