--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5384,6 +5384,9 @@ harvester:
 
   support:
     title: Harvester Support
+    kubeconfig:
+      title: Download KubeConfig
+      titleDescription: Download kubeconfig for debugging or importing as an external cluster to Rancher. 
   
   namespace:
     label: Namespaces
