use secret save cloudConfig

--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5123,6 +5123,7 @@ harvester:
 
   virtualMachine:
     label: Virtual Machines
+    osType: OS Type
     instance:
       singleInstance: 
       multipleInstance: 
