--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -3085,6 +3085,7 @@ project:
   members:
     label: Members
   containerDefaultResourceLimit: Container Default Resource Limit
+  vmDefaultResourceLimit: VM Default Resource Limit
   resourceQuotas: Resource Quotas
   haveOneOwner: There must be at least one member with the Owner role.
   psp:
