--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5005,6 +5005,9 @@ harvester:
     cpu: Cpu
     memory: Memory
     virtaulName: Virtual machine name
+  generic:
+    showMore: Show More
+    hideMore: Hide More
   
   validation:
     custom:
