--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5005,6 +5005,8 @@ harvester:
     cpu: Cpu
     memory: Memory
     virtaulName: Virtual machine name
+    promiscuous: Promiscuous
+    ipv4Address: IPv4 Address
   generic:
     showMore: Show More
     hideMore: Hide More
