--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5010,6 +5010,9 @@ harvester:
   generic:
     showMore: Show More
     hideMore: Hide More
+    memory: Memory
+    cpu: CPU
+    storage: Storage
   
   validation:
     custom:
@@ -5044,7 +5047,7 @@ harvester:
     hardwareResourceGauge:
       cpu: CPU
       memory: Memory
-      storage: Storage Size
+      storage: Storage
     sections:
       events:
         label: Events
@@ -5092,7 +5095,7 @@ harvester:
       kernel: Kernel
       management: Management Node
       compute: Compute Node
-      storage: Storage Size
+      storage: Storage
       nic: Physical NIC
       notRecommended: 'Not recommended'
       networkType: Type
