--- a/assets/translations/zh-hans.yaml
+++ b/assets/translations/zh-hans.yaml
@@ -4919,6 +4919,9 @@ advancedSettings:
     'harv-upgrade-checker-url': 默认的Harvester升级检查地址。 仅在<code> upgrade-checker-enabled </code> 等于true时使用。
     'harv-ui-source': 配置如何加载UI资源.
     'harv-ui-index': 'UI的HTML索引。'
+    'harv-http-proxy': '用于Harvester访问外部服务的HTTP代理。.'
+    'harv-additional-ca': '用于TLS验证的自定义CA根证书.'
+    'harv-overcommit-config ': '资源超额配置.'
   editHelp:
     'ui-banners': 这个设置需要一个JSON对象，包含3个根参数；<code>banner</code>, <code>showHeader</code>, <code>showFooter</code>。<code>banner</code>是一个包含；<code>textColor</code>, <code>background</code>, 和<code>text</code>的对象，其中<code>textColor</code>和<code>background</code>是任何有效的CSS颜色值。
   enum:
