HARVESTER: add ssl-certificate setting

--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5077,6 +5077,7 @@ harvester:
     memory: Memory
     cpu: CPU
     storage: Storage
+    noFileChosen: No file chosen
   
   validation:
     custom:
