HARVESTER: add view logs in vm

--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5064,6 +5064,7 @@ harvester:
     uncordon: Uncordon
     addHotplug: Add Volume
     exportImage: Export Image
+    viewlogs: View Logs
   tableHeaders:
     size: Size
     progress: Progress
