HARVESTER: Add vnc error message

--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -6282,3 +6282,7 @@ legacy:
 serverUpgrade:
   title: "{vendor} Server Changed"
   message: "The page reloaded because the version of {vendor} running on your server changed."
+
+vncConsole:
+  error:
+    message: Web VNC console connection is disconnected
