HARVESTSER: use runStrategy replace running

--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5331,7 +5331,7 @@ harvester:
       detachVolume:
         Detach Volume
     restartTip: Restart the virtual machine now to take effect of the configuration changes.
-    createRunning: Start virtual machine on creation
+    runStrategy: RunStrategy
     restartNow: Restart Now
     createSSHKey: Create a New...
     installAgent: Install guest agent
