--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5305,6 +5305,7 @@ harvester:
     createVM: Create a Virtual Machine
     start: Start
     restart: Restart
+    softreboot: Soft Reboot
     stop: Stop
     pause: Pause
     unpause: Unpause
