HARVESTER: node ip tip

--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -5449,6 +5449,7 @@ harvester:
     version: Version
   host:
     label: Hosts
+    inconsistentIP: "Host IP is inconsistent, current IP: { currentIP }, initial IP: { initIP }"
     promote:
       none: ' '
       running: promoting
