--- a/assets/translations/zh-hans.yaml
+++ b/assets/translations/zh-hans.yaml
@@ -5640,6 +5640,9 @@ harvester:
       imagePullPolicy: 镜像拉取策略
     harvesterMonitoring:
       label: Harvester Monitoring
+      section:
+        prometheus: Prometheus 配置
+        prometheusNodeExporter: Prometheus 节点资源采集配置
       tips:
         scrape: 每次采集数据的间隔时间
         evaluation: 每次评估规则的间隔时间
