--- a/assets/translations/en-us.yaml
+++ b/assets/translations/en-us.yaml
@@ -6260,6 +6260,11 @@ typeLabel:
       one { Network Attachment Definition }
       other { Network Attachment Definitions }
     }
+  harvesterhci.io.networkattachmentdefinition: |-
+    {count, plural,
+      one { Network }
+      other { Networks }
+    }
   harvesterhci.io.volume: |-
     {count, plural,
       one { Volume }
