websocket disconnect growl
websocket reconnect close growl

rm redundant websocket console error

--- a/shell/assets/translations/en-us.yaml
+++ b/shell/assets/translations/en-us.yaml
@@ -2040,6 +2040,12 @@ graphOptions:
   refresh: Refresh
   range: Range
 
+growl:
+  clearAll: Clear All Notifications
+  disconnected: 
+    message: "The connection to {url} closed unexpectedly {time}. Retrying..."
+    title: Websocket Disconnected 
+
 hpa:
   detail:
     currentMetrics:
