--- a/assets/translations/zh-hans.yaml
+++ b/assets/translations/zh-hans.yaml
@@ -5501,6 +5501,7 @@ harvester:
 
     version: 版本
   host:
+    console: 控制台
     label: 主机
     inconsistentIP: "主机IP不一致, 当前IP: { currentIP }, 初始化IP: { initIP }"
     promote:
