HARVESTER: add websocket disconnect warning

--- a/shell/assets/translations/en-us.yaml
+++ b/shell/assets/translations/en-us.yaml
@@ -7031,3 +7031,6 @@ auth:
 vncConsole:
   error:
     message: Web VNC console connection is disconnected
+serialConsole:
+  error:
+    message: Serial Console connection is disconnected
